# rasengan

./: .gitignore  README.md
rasengan/: CMakeLists.txt  premake5.lua
rasengan/CodeDoc/: CameraTranform.mmd  CommandBuffer.mmd  DescriptorPoolAndSets.mmd  Mipmaps.mmd  MultiSampling.mmd  RenderPass.mmd  SPIRV.mmd  Texture.mmd  VetexBuffer.mmd  VulkanTutorial.xmind  每帧的渲染流程.drawio
rasengan/shaders/: simpleColor.frag  simpleColor.vert  simpleTexture.frag  vertexBuffer.vert  vertexWithUniformBuffer.vert
rasengan/spv_files/: simpleColor.vert.spv
rasengan/src/: DemoScene.h  main.cpp
rasengan/src/EditorCore/: HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  Selection.cpp  Selection.h
rasengan/src/EngineCore/: AssertUtil.h  Camera.cpp  Camera.h  Component.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ModelLoader.cpp  ModelLoader.h  Scene.cpp  Scene.h  SceneViewCameraController.cpp  SceneViewCameraController.h  Time.cpp  Time.h  Transform.cpp  Transform.h
rasengan/src/EngineCore/Geometry/: Cube.cpp  Cube.h  Quad.cpp  Quad.h
rasengan/src/IMGUI/: ImGuiEx.cpp  ImGuiEx.h  VulkanImguiLayer.cpp  VulkanImguiLayer.hpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
rasengan/src/Input/: Input.cpp  Input.h
rasengan/src/Rendering/: RenderingDataDefine.h
rasengan/src/VulkanCore/: ShaderUtil.h  VulkanApp.cpp  VulkanApp.h  VulkanBufferHelper.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.h  VulkanDebugUtil.h  VulkanDevice.cpp  VulkanDevice.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInitializer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanValidation.h  VulkanVertex.cpp  VulkanVertex.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h  VulkanWindow.cpp  VulkanWindow.h
rasengan/src/VulkanCore/Managers/: VulkanPipelineManager.cpp  VulkanPipelineManager.h
rasengan/src/VulkanCore/Spirv/: VulkanSpirvCommon.cpp  VulkanSpirvOutputStreamUtil.cpp  VulkanSpirvReflection.cpp  VulkanSpirvReflection.h
